--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Covid Case Data</title>
-    <script language="javascript" type="module" src="/js/dataProcessor.js"></script>
+    <script language="javascript" type="module" src="./js/dataProcessor.js"></script>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
